# MPAS-Model

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MPAS-BR-contributions-GTM.md  MPAS-BR-contributions-PXT.md  MPAS-BR-contributions.md  Makefile  PXT_modifications_to_MPAS.txt  README.mac_compile  README.md  README.md.cmap  compile  index.html  makeMALI  mpas_compile.pgi.sh  mpas_compile.sh  mpas_mac_compile.sh  mpas_regression_compile.sh  target_domain.Petropolis  test
src/: CMakeLists.txt  Makefile
src/core_atmosphere/: .gitignore  CMakeLists.txt  Externals.cfg  Makefile  Registry.xml  build_options.mk  mpas_atm_core.F  mpas_atm_core_interface.F  mpas_atm_halos.F  mpas_atm_threading.F
src/core_atmosphere/chemistry/: Registry_init_tracers.xml  Registry_tracers.xml  mpas_init_atm_tracers.F
src/core_atmosphere/diagnostics/: CMakeLists.txt  Makefile  README  Registry_accumulated.xml  Registry_aviation.xml  Registry_cloud.xml  Registry_convective.xml  Registry_convective2.xml  Registry_cpox.xml  Registry_deformation.xml  Registry_diagnostics.xml  Registry_hiwc.xml  Registry_isobaric.xml  Registry_lightning.xml  Registry_pv.xml  Registry_snowratio.xml  Registry_soundings.xml  Registry_surface.xml  Registry_tendencies.xml  Registry_turbulence.xml  Registry_unstagger.xml  Registry_wind.xml  accumulated_diagnostics.F  aviation_diagnostics.F  calc_ctt.F  cloud_diagnostics.F  convective_diagnostics.F  convective_diagnostics2.F  cpox_diagnostics.F  deformation_diagnostics.F  hiwc_diagnostics.F  isobaric_diagnostics.F  lightning_flash_diagnostics.F  mpas_atm_diagnostic_template.F  mpas_atm_diagnostics_manager.F  mpas_atm_diagnostics_packages.F  mpas_cloud_diagnostics.F  mpas_convective_diagnostics.F  mpas_isobaric_diagnostics.F  mpas_kd_tree.F  (+11 more)
src/core_atmosphere/dynamics/: CMakeLists.txt  Makefile  mpas_atm_boundaries.F  mpas_atm_iau.F  mpas_atm_time_integration.F
src/core_atmosphere/physics/: .gitignore  CMakeLists.txt  Makefile  Makefile_diag  Registry_atmphys_diagnostics.xml  Registry_atmphys_interp.xml  Registry_noahmp.xml  ccpp_kind_types.F  ccpp_kinds.F  checkout_data_files.sh  mpas_atmphys_camrad_init.F  mpas_atmphys_compute_diagnostics.F  mpas_atmphys_compute_diagnostics_bl.F  mpas_atmphys_compute_diagnostics_cu.F  mpas_atmphys_constants.F  mpas_atmphys_control.F  mpas_atmphys_date_time.F  mpas_atmphys_driver.F  mpas_atmphys_driver_cloudiness.F  mpas_atmphys_driver_convection.F  mpas_atmphys_driver_gwdo.F  mpas_atmphys_driver_lsm.F  mpas_atmphys_driver_lsm_noahmp.F  mpas_atmphys_driver_lsm_shared.F  mpas_atmphys_driver_microphysics.F  mpas_atmphys_driver_oml.F  mpas_atmphys_driver_pbl.F  mpas_atmphys_driver_radiation_lw.F  mpas_atmphys_driver_radiation_sw.F  mpas_atmphys_driver_seaice.F  mpas_atmphys_driver_sfclayer.F  mpas_atmphys_fdda.F  mpas_atmphys_finalize.F  mpas_atmphys_functions.F  mpas_atmphys_init.F  mpas_atmphys_init_microphysics.F  mpas_atmphys_initialize_real.F  mpas_atmphys_interface.F  mpas_atmphys_landuse.F  mpas_atmphys_lsm_noahinit.F  (+11 more)
src/core_atmosphere/utils/: Makefile  atmphys_build_tables_thompson.F
src/core_init_atmosphere/: CMakeLists.txt  Makefile  Registry.xml  mpas_atm_advection.F  mpas_geotile_manager.F  mpas_gsl_oro_data_lg_scale.F  mpas_gsl_oro_data_sm_scale.F  mpas_init_atm_cases.F  mpas_init_atm_cases.mpi.F  mpas_init_atm_core.F  mpas_init_atm_core_interface.F  mpas_init_atm_gocart.F  mpas_init_atm_gwd.F  mpas_init_atm_gwd_gsl.F  mpas_init_atm_llxy.F  mpas_init_atm_read_met.F  mpas_init_atm_static.F  mpas_init_atm_surface.F  mpas_init_atm_thompson_aerosols.F  mpas_init_atm_tracers.F  mpas_kd_tree.F  mpas_parse_geoindex.F  mpas_stack.F  read_tile.c
src/core_landice/: Makefile  Registry.xml  landice.cmake  mpas_li_core_interface.F
src/core_landice/analysis_members/: mpas_li_analysis_driver.F  mpas_li_global_stats.F  mpas_li_regional_stats.F
src/core_landice/mode_forward/: Interface_velocity_solver.cpp  Makefile  mpas_li_advection.F  mpas_li_calving.F  mpas_li_core_interface.F  mpas_li_diagnostic_vars.F  mpas_li_iceshelf_melt.F  mpas_li_sia.F  mpas_li_statistics.F  mpas_li_subglacial_hydro.F  mpas_li_thermal.F  mpas_li_time_integration_fe.F  mpas_li_velocity.F  mpas_li_velocity_external.F
src/core_ocean/: .gitignore  CMakeLists.txt  Makefile  Registry.xml  get_BGC.sh  get_cvmix.sh  get_palm_les.sh  mpas_ocn_global_diagnostics.F  ocean.cmake
src/core_ocean/TEOS-10/: README
src/core_ocean/analysis_members/: Makefile  Registry_analysis_members.xml  Registry_conservation_check.xml  (+31 more)
src/core_seaice/: Makefile  Registry.e3sm.xml  Registry.xml  seaice.cmake
src/core_sw/: CMakeLists.txt  Makefile  Registry.xml  mpas_sw_core.F  mpas_sw_core_interface.F  mpas_sw_time_integration.F
src/core_test/: CMakeLists.txt  Makefile  Registry.xml  mpas_halo_testing.F  mpas_test_core.F  mpas_test_core_dmpar.F  mpas_test_core_field_tests.F  mpas_test_core_halo_exch.F  mpas_test_core_interface.F  mpas_test_core_stream_inquiry.F  mpas_test_core_string_utils.F  mpas_test_core_timekeeping_tests.F  mpas_test_openacc.F
src/driver/: CMakeLists.txt  Makefile  mpas.F  mpas_subdriver.F
src/framework/: CMakeLists.txt  Makefile  framework.cmake  mpas_abort.F  mpas_attlist.F  mpas_attlist_types.inc  mpas_block_creator.F  mpas_block_decomp.F  mpas_bootstrapping.F  mpas_constants.F  mpas_core_types.inc  mpas_coupler_types.inc  mpas_derived_types.F  mpas_dmpar.F  mpas_dmpar_types.inc  mpas_domain_routines.F  mpas_domain_types.inc  mpas_field_routines.F  mpas_forcing.F  mpas_framework.F  mpas_halo.F  mpas_halo_types.inc  mpas_intracoupler.F  mpas_io.F  mpas_io_streams.F  mpas_io_types.inc  mpas_io_units.F  mpas_log.F  mpas_log_types.inc  mpas_omp_offload.inc  mpas_openmp.inc  mpas_particle_list_types.inc  mpas_pool_routines.F  mpas_stream_inquiry.F  mpas_stream_inquiry_types.inc  mpas_stream_manager.F  mpas_string_utils.F  mpas_threading.F  mpas_timekeeping.F  mpas_timekeeping_types.inc  (+4 more)
src/operators/: CMakeLists.txt  Makefile  mpas_consistent.F  mpas_geometry_utils.F  mpas_tracer_advection_helpers.F  mpas_vector_reconstruction.F
src/tools/: CMakeLists.txt
(+10079 files in other folders)
